@@ -1,3 +1,7 @@
+2008-06-20	Joel Sherrill <joel.sherrill@OARcorp.com>
+
+	* user/conf.t: Fix text on CONFIGURE_APPLICATION_NEEDS_CLOCK_DRIVER.
+
 2008-02-14	Joel Sherrill <joel.sherrill@OARcorp.com>
 
 	* user/mp.t: Now builds.
